--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     right: 0;
-    background-color: #66bb6a;
+    background-color: #87D2A7;
     padding: 15px 20px;
     display: flex;
     justify-content: space-between;
@@ -14,6 +14,7 @@
 }
 
 .logo {
+    color: #0F114B;
     font-size: 1.2rem;
     font-weight: bold;
     white-space: nowrap;
