--- a/frontend/src/components/EventCard/EventCard.css
+++ b/frontend/src/components/EventCard/EventCard.css
@@ -1,5 +1,5 @@
 .event-card {
-    background-color: #87D2A7;
+    background-color: #AEE5C6;
     border-radius: 10px;
     transition: transform 0.2s ease, box-shadow 0.2s ease;
     cursor: pointer;
