--- a/organizer-frontend/src/App.css
+++ b/organizer-frontend/src/App.css
@@ -35,23 +35,25 @@
 }
 
 .card {
-  padding: 2em;
+    padding: 2em;
 }
 
 .read-the-docs {
   color: #888;
 }
 header {
-    padding:10px 0px 10px 9px;
+    padding: 10px 0px 10px 9px;
     background-color: #87D2A7;
     color: black;
     white-space: pre;
-    font-weight:bold;
-    font-size:20px;
+    font-weight: bold;
+    font-size: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 }
 
-.logoimg{
-    position:absolute;
-    width:50px;
-    margin:-10px 0px 0px 80px;
+.logoimg {
+    filter: drop-shadow(0px 2px 4px #222);
+    position: absolute;
+    width: 50px;
+    margin: -10px 0px 0px 80px;
 }
