--- a/organizer-frontend/src/compts/cardd.css
+++ b/organizer-frontend/src/compts/cardd.css
@@ -1,4 +1,5 @@
 .event-card {
+    margin: 20px;
     border: none !important;
     border-radius: 10px !important;
     overflow: hidden !important;
