--- a/organizer-frontend/src/compts/cardd.css
+++ b/organizer-frontend/src/compts/cardd.css
@@ -11,7 +11,7 @@
     height: 100% !important;
     margin-bottom: 15px !important;
     width: 100% !important;
-    max-width: 100% !important;
+    max-width: 200px !important;
 }
 
     .event-card:hover {
