--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -87,9 +87,32 @@
   transition: background-color 0.2s ease;
 }
 
+.profile-dropdown .dropdown-item.profile-right {
+  text-align: right;
+}
+
+.profile-dropdown .dropdown-item img {
+  vertical-align: middle;
+}
+
 .profile-dropdown .dropdown-item:hover {
   background-color: #f5f5f5;
 }
+
+.dropstart .dropdown-toggle::before {
+  display: none !important;
+  content: none !important;
+  border: none !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  width: 0 !important;
+  height: 0 !important;
+}
+
+  .dropstart .dropdown-menu[data-bs-popper] {
+    top: 0px;
+    right: -10%;
+  }
 
 /* Адаптивные стили */
 @media (max-width: 768px) {
@@ -105,4 +128,5 @@
   .header .logo {
     font-size: 1.1rem;
   }
+
 }
