--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -130,3 +130,9 @@
   }
 
 }
+.logoimg {
+    filter: drop-shadow(0px 2px 4px #222);
+    position: absolute;
+    width: 50px;
+    margin: -10px 0px 0px 80px;
+}
